Fix spacing for nested lists

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -214,7 +214,7 @@ ol {
 
 li>ul,
 li>ol {
-    margin: .5em 0 1.66667em;
+    margin: .5em 0 .5em;
 }
 
 hr {
